--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "react-planner": "git+https://autonomus-react-planner:xqyzqRYuzbEBs52gt1sE@gitlab.com/autonomous-hot-desking/frontend/react_planner.git#master",
     "react-scripts": "4.0.3",
     "three": "^0.130.1",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start-old": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "webpack serve",
-    "prod": "webpack --config webpack.prod.js"
+    "test-old": "react-scripts test",
+    "eject-old": "react-scripts eject",
+    "dev-old": "webpack serve",
+    "prod-old": "webpack --config webpack.prod.js",
+    "dev": "webpack serve --config webpack.dev.ts",
+    "prod": "webpack --config webpack.prod.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -40,14 +44,33 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@babel/runtime": "^7.14.6",
+    "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.6",
+    "eslint": "^7.30.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^2.5.4",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^6.2.12",
     "html-webpack-plugin": "^5.3.2",
     "style-loader": "^3.0.0",
     "webpack": "^5.43.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0",
     "webpack-server": "^0.1.2"
   }
 }
